[metadata]
name = graph-conv-memory
version = 0.0.5
author = Steven Morad
author_email = stevenmorad@gmail.com
description = Graph convolutional memory for reinforcement learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smorad/graph-conv-memory
project_urls =
    Bug Tracker = https://github.com/smorad/graph-conv-memory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    torch
    torch_geometric >= 1.7.0

[options.packages.find]
where = src
